Fix for missing tree text in IE7 (if no-wrap and too wide to fit) EXAMPLE: http://mercury-2.local/term/quality/PATO:0001997

--- a/public/stylesheets/simpletree.css
+++ b/public/stylesheets/simpletree.css
@@ -24,6 +24,7 @@ ul.simpleTree {
   display:inline;
   clear: left;
   white-space: nowrap;
+  zoom: 1;
 }
 .simpleTree ul
 {
